fix: add missing device column header to admin table

--- a/stalkea_clone/templates/admin_index.html
+++ b/stalkea_clone/templates/admin_index.html
@@ -315,6 +315,7 @@
                                 <th>IP / ID</th>
                                 <th>Localização</th>
                                 <th>Página Atual</th>
+                                <th>Dispositivo</th>
                                 <th>@ Pesquisado</th>
                                 <th>Status</th>
                                 <th>Visto Por Último</th>
